tests/paczka1/fuzzy1/55230167.err
Error in line 1: KOLXdaJMes A975 96,8
Error in line 7: KOLXdaJMes A241 17,4
Error in line 3: 0iKnnIn1XTI A975 81,4
Error in line 12: KOLXdaJMes A241 70,1
Error in line 10: 0iKnnIn1XTI A241 47,0
Error in line 23: KOLXdaJMes A975 -1,3
Error in line 18: KOLXdaJMes A975 69,6
Error in line 27: STq8VS0 A975 44,6
